logs/ethjsonrpc.log
Listing '.'...
Listing './bin'...
Listing './bitcoin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Crypto'...
Listing './lib/python3.5/site-packages/Crypto/Cipher'...
Listing './lib/python3.5/site-packages/Crypto/Hash'...
Listing './lib/python3.5/site-packages/Crypto/IO'...
Listing './lib/python3.5/site-packages/Crypto/Math'...
Listing './lib/python3.5/site-packages/Crypto/Protocol'...
Listing './lib/python3.5/site-packages/Crypto/PublicKey'...
Listing './lib/python3.5/site-packages/Crypto/Random'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Cipher'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Cipher/test_vectors'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Cipher/test_vectors/AES'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Cipher/test_vectors/TDES'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Hash'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Hash/test_vectors'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Hash/test_vectors/BLAKE2b'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Hash/test_vectors/BLAKE2s'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Hash/test_vectors/SHA3'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Hash/test_vectors/keccak'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/IO'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Math'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Protocol'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/PublicKey'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/PublicKey/test_vectors'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/PublicKey/test_vectors/ECC'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Random'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Signature'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Signature/test_vectors'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Signature/test_vectors/DSA'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Signature/test_vectors/ECDSA'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Signature/test_vectors/PKCS1-PSS'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Signature/test_vectors/PKCS1-v1.5'...
Listing './lib/python3.5/site-packages/Crypto/SelfTest/Util'...
Listing './lib/python3.5/site-packages/Crypto/Signature'...
Listing './lib/python3.5/site-packages/Crypto/Util'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/bitcoin'...
Listing './lib/python3.5/site-packages/bitcoin-1.1.42.egg-info'...
Listing './lib/python3.5/site-packages/ethereum'...
Compiling './lib/python3.5/site-packages/ethereum/fast_rlp.py'...
***   File "./lib/python3.5/site-packages/ethereum/fast_rlp.py", line 48
    print 'elapsed', time.time() - st
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ethereum/tests'...
Compiling './lib/python3.5/site-packages/ethereum/tests/benchmark_db.py'...
***   File "./lib/python3.5/site-packages/ethereum/tests/benchmark_db.py", line 20
    print sz, sum(nsz) // len(nsz), ldbsz
           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ethereum/tests/bintrie.py'...
***   File "./lib/python3.5/site-packages/ethereum/tests/bintrie.py", line 258
    print x
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ethereum/tests/profile_vm.py'...
***   File "./lib/python3.5/site-packages/ethereum/tests/profile_vm.py", line 20
    print 'profile_vm.py [no_cprofile]'
                                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ethereum/tests/test_transactions.py'...
***   File "./lib/python3.5/site-packages/ethereum/tests/test_transactions.py", line 39
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ethereum/tests/test_trie.py'...
***   File "./lib/python3.5/site-packages/ethereum/tests/test_trie.py", line 28
    print testdir
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ethereum/testutils.py'...
***   File "./lib/python3.5/site-packages/ethereum/testutils.py", line 504
    print 9
          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/ethereum-1.0.8.egg-info'...
Listing './lib/python3.5/site-packages/ethjsonrpc'...
Listing './lib/python3.5/site-packages/ethjsonrpc-0.3.0.egg-info'...
Listing './lib/python3.5/site-packages/pbkdf2-1.3.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pycryptodome-3.4.7.egg-info'...
Listing './lib/python3.5/site-packages/pyethash-0.1.27.egg-info'...
Listing './lib/python3.5/site-packages/pysha3-1.0.2.dist-info'...
Listing './lib/python3.5/site-packages/repoze'...
Listing './lib/python3.5/site-packages/repoze/lru'...
Listing './lib/python3.5/site-packages/repoze.lru-0.7.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests/packages'...
Listing './lib/python3.5/site-packages/requests/packages/chardet'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/util'...
Listing './lib/python3.5/site-packages/requests-2.9.1.dist-info'...
Listing './lib/python3.5/site-packages/rlp'...
Listing './lib/python3.5/site-packages/rlp/sedes'...
Listing './lib/python3.5/site-packages/rlp-0.4.4.dist-info'...
Listing './lib/python3.5/site-packages/scrypt-0.8.0.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tools'...
Compiling './lib/python3.5/site-packages/tools/keystorer.py'...
***   File "./lib/python3.5/site-packages/tools/keystorer.py", line 28
    print j
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/tools/random_vm_test_generator.py'...
***   File "./lib/python3.5/site-packages/tools/random_vm_test_generator.py", line 102
    print json.dumps({sys.argv[1]: o}, indent=4)
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tools/vm_test_generator.py'...
***   File "./lib/python3.5/site-packages/tools/vm_test_generator.py", line 70
    print json.dumps({sys.argv[1]: o}, indent=4)
             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
